# kaguya-code

./: .gitmodules  CMakeLists.txt  ReadMe.md
exp/: CMakeLists.txt
exp/cone/: CMakeLists.txt  cone.c
exp/dir_forward/: CMakeLists.txt  dir_forward.cpp
exp/downlink/: CMakeLists.txt  receiver.c  tranceiver.c
exp/kaisan/: CMakeLists.txt  kaisan.cpp  readlog.cpp
exp/log_showall/: CMakeLists.txt  log_showall.cpp
exp/nichrome/: CMakeLists.txt  nichrome.c
exp/nichrome2/: CMakeLists.txt  nichrome.c
exp/parachute/: CMakeLists.txt  parachute.c
exp/parachute_read/: 20230423_test1.csv  CMakeLists.txt  parachute_read.c
exp/readlog/: CMakeLists.txt  readlog.c  readlog2.c
exp/rotate/: CMakeLists.txt  child.c  lora.c  lora.h  rotate.c
exp/selftest/: CMakeLists.txt  selftest.c
exp/setDirForwardGuide/: CMakeLists.txt  setDirForwardGuide.cpp
exp/straight/: CMakeLists.txt  straight-indvs.cpp  straight.c  straight.cpp
exp/tire-sesami/: CMakeLists.txt  tire-sesami.c
exp/umotor-test/: CMakeLists.txt  umotor-test.cpp
flight/: CMakeLists.txt  aflight.cpp  config.h  flight-toftest.cpp  flight.cpp  util.h
lib/: CMakeLists.txt
lib/gnss/: CMakeLists.txt
lib/gnss/example/: CMakeLists.txt  ex_gnss.c
lib/gnss/nmeap-0.3/: CMakeLists.txt
lib/gnss/nmeap-0.3/src/: nmeap01.c
lib/health_monitor/example/: CMakeLists.txt  monitor_IV.c
lib/health_monitor/src/: CMakeLists.txt  health.c  health.h
lib/kaguya-pin/: CMakeLists.txt  kaguya-pin.h
lib/motor_encoder/: CMakeLists.txt
lib/motor_encoder/example/: CMakeLists.txt  ex_motor_encoder.c
lib/motor_encoder/src/: CMakeLists.txt  motor.c  motor.h  quadrature_encoder.pio.h
lib/pico-bno08x/: CMakeLists.txt
lib/pico-bno08x/examples/: CMakeLists.txt
lib/pico-bno08x/examples/ex0_rotation_vector/: CMakeLists.txt  ex0_rotation_vector.cpp
lib/pico-bno08x/examples/ex1_calibration/: CMakeLists.txt  ex1_calibration.cpp
lib/pico-bno08x/src/: CMakeLists.txt  i2c_write_nors_blockinga.c  i2c_write_nors_blockinga.h  pico-bno08x.cpp  pico-bno08x.h
lib/vl53l5cx/: CMakeLists.txt
lib/vl53l5cx/api/: CMakeLists.txt  platform.c  platform.h  vl53l5cx_api.c  vl53l5cx_api.h  vl53l5cx_buffers.h  vl53l5cx_plugin_detection_thresholds.h
lib/vl53l5cx/examples/: CMakeLists.txt
lib/vl53l5cx/examples/ex10_motion_indicator/: CMakeLists.txt  ex10_motion_indicator.c
lib/vl53l5cx/examples/ex11_motion_indicator_with_detection_thresholds/: CMakeLists.txt  ex11_motion_indicator_with_detection_thresholds.c
lib/vl53l5cx/examples/ex1_ranging_basic/: CMakeLists.txt  ex1_ranging_basic.c
lib/vl53l5cx/examples/ex2_get_set_params/: CMakeLists.txt  ex2_get_set_params.c
lib/vl53l5cx/examples/ex3_ranging_modes/: CMakeLists.txt  ex3_ranging_modes.c
lib/vl53l5cx/examples/ex4_power_modes/: CMakeLists.txt  ex4_power_modes.c
lib/vl53l5cx/examples/ex5_multiple_targets_per_zone/: CMakeLists.txt  ex5_multiple_targets_per_zone.c
lib/vl53l5cx/examples/ex6_I2C_and_RAM_optimizaton/: CMakeLists.txt  ex6_I2C_and_RAM_optimizaton.c
lib/vl53l5cx/examples/ex7_calibrate_xtalk/: CMakeLists.txt  ex7_calibrate_xtalk.c
lib/vl53l5cx/examples/ex8_visualize_xtalk_data/: CMakeLists.txt  ex8_visualize_xtalk_data.c
lib/vl53l5cx/examples/ex9_detection_thresholds/: CMakeLists.txt  ex9_detection_thresholds.c
ulib/: CMakeLists.txt
ulib/ugps/: CMakeLists.txt  ugps.cpp  ugps.h
ulib/ulog/: CMakeLists.txt  ulog.cpp  ulog.h
ulib/umotor/: CMakeLists.txt  umotor.cpp  umotor.h
ulib/uprs/: uprs.cpp
ulib/utof/: CMakeLists.txt  utof.cpp  utof.h
wlib/: CMakeLists.txt
wlib/umotor/: umotor.cpp  umotor.h
wlib/uprs/: CMakeLists.txt  uprs.cpp  uprs.h
