add_subdirectory(ex1_ranging_basic)
add_subdirectory(ex2_get_set_params)
add_subdirectory(ex3_ranging_modes)
add_subdirectory(ex4_power_modes)
add_subdirectory(ex5_multiple_targets_per_zone)
add_subdirectory(ex6_I2C_and_RAM_optimizaton)
add_subdirectory(ex7_calibrate_xtalk)
add_subdirectory(ex8_visualize_xtalk_data)
add_subdirectory(ex9_detection_thresholds)
add_subdirectory(ex10_motion_indicator)
add_subdirectory(ex11_motion_indicator_with_detection_thresholds)
