add_executable(ex11_motion_indicator_with_detection_thresholds ex11_motion_indicator_with_detection_thresholds.c)

target_link_libraries(ex11_motion_indicator_with_detection_thresholds pico_stdlib hardware_i2c vl53l5cx)

pico_enable_stdio_usb(ex11_motion_indicator_with_detection_thresholds 1)
pico_enable_stdio_uart(ex11_motion_indicator_with_detection_thresholds 0)

pico_add_extra_outputs(ex11_motion_indicator_with_detection_thresholds)
